--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -4,12 +4,13 @@
 <head>
     <title>React-Demo</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="webjars/boostrap/css/bootstrap.css">
-    <link rel="stylesheet" href="webjars/boostrap/css/bootstrap.min.css">
+    <link rel="stylesheet" href="css/bootstrap.css">
     <link rel="stylesheet" href="css/app.css">
 </head>
 
 <body>
+
+<script type="text/javascript" src="js/bootstrap.js"></script>
 
 <h1>Hello world!</h1>
 
